# BML

./: .gitignore  BML  CMakeLists.txt  README.md  configure  configure.bat
cmake/: BMLConfig.cmake.in
docs/: .~lock.installation_guide.odt#  Matrix_API_Documentation.odt  Matrix_User_Guide.odt  extended_matrix_dtypes_operators.ods  installation_guide.odt
include/: bml.hpp  iterator.hpp  rowView.hpp
include/bml/: bml.hpp  boolRef.hpp  export.hpp  iterator.hpp  matrix.hpp  platform.hpp  rowView.hpp  traversal.hpp  typeTraits.hpp  version.hpp
source/: bml.cpp  testMatrix.cpp
src/: bml.cpp  boolRef.cpp  instantiations.cpp  iterator.cpp  main.cpp  matrix.cpp  rowView.cpp  testMatrix.cpp
